--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@prisma/client": "4.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
